--- a/build.properties
+++ b/build.properties
@@ -5,7 +5,7 @@ framework.entity.base.dir=${framework.dir}/entity
 framework.servlet.base.dir=${framework.dir}/servlet
 framework.impl.jboss-hibernate.base.dir=${framework.dir}/impl/jboss-hibernate
 
-framework.entity.src.dirs=${framework.dir}/common/src:${framework.dir}/gwt/src:${framework.entity.base.dir}/src
+framework.entity.src.dirs=${framework.dir}/common/src:${framework.dir}/gwt/src:${framework.entity.base.dir}/src:${alcina.home}/extras/jsdom/src:${alcina.home}/extras/jsdom/src-element
 framework.servlet.src.dirs=${framework.servlet.base.dir}/src
 framework.impl.jboss-hibernate.src.dirs=${framework.impl.jboss-hibernate.base.dir}/src
 
