Log too-many-parser-threads issue

--- a/framework/servlet/src/cc/alcina/framework/servlet/servlet/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/servlet/Bundle.properties
@@ -2,3 +2,4 @@ CommonRemoteServiceServlet.dumpPermitted=false
 CommonRemoteServiceServlet.loadDumpPermitted=false
 CommonRemoteServiceServlet.throwLogClientRecordExceptions=false
 CommonRemoteServiceServlet.metricTrackerMs=0
+AlcinaChildRunnable.traceConstruction=true
