basic tail servlet

--- a/framework/servlet/src/cc/alcina/framework/servlet/servlet/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/servlet/Bundle.properties
@@ -3,3 +3,4 @@ CommonRemoteServiceServlet.loadDumpPermitted=false
 CommonRemoteServiceServlet.throwLogClientRecordExceptions=false
 CommonRemoteServiceServlet.metricTrackerMs=0
 AlcinaChildRunnable.traceConstruction=false
+TailServlet.file=/var/local/jboss/standalone/log/server.log
