--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="lib" path="lib/extras/dev/httpclient-4.1.jar" sourcepath="/Users/ouiji/Documents/programmin/java/httpcomponents-client-4.1/"/>
 	<classpathentry kind="lib" path="lib/extras/dev/httpcore-4.1.jar"/>
+	<classpathentry kind="lib" path="lib/framework/entity/xalan-2.7.2.jar" sourcepath="/xalan-j"/>
 	<classpathentry exported="true" kind="lib" path="lib/framework/entity/commons-lang-2.5.jar"/>
 	<classpathentry excluding="cc/alcina/framework/common/translatable/" kind="src" path="framework/common/src"/>
 	<classpathentry kind="src" path="extras/jsdom/src-regex"/>
