--- a/framework/entity/src/cc/alcina/framework/entity/domaintransform/Bundle.properties
+++ b/framework/entity/src/cc/alcina/framework/entity/domaintransform/Bundle.properties
@@ -1,2 +1,3 @@
 TransformConflicts.ignoreConflicts=false
 ThreadlocalTransformManager.ignoreTransformPermissions=false
+ClassrefScanner.removePersistentClassrefs=false
