dev transform support

--- a/framework/servlet/src/cc/alcina/framework/servlet/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/Bundle.properties
@@ -1,3 +1,4 @@
 noRefreshOfSavedCache=false
 ServletLayerUtils.maxTransformChunkSize=6000
 ServletLayerUtils.testTransformCascade=false
+ServletLayerUtils.commitTestTransforms=false
