--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,7 @@
 	<classpathentry kind="lib" path="lib/framework/entity/xalan-2.7.2.jar" sourcepath="/xalan-j"/>
 	<classpathentry exported="true" kind="lib" path="lib/framework/entity/commons-lang-2.5.jar"/>
 	<classpathentry excluding="cc/alcina/framework/common/translatable/" kind="src" path="framework/common/src"/>
+	<classpathentry kind="src" path="framework/classmeta/src"/>
 	<classpathentry kind="src" path="extras/jsdom/src-regex"/>
 	<classpathentry excluding="com/google/gwt/user/client/translatable/" kind="src" output="framework/extras/rpc/client/build" path="extras/rpc/client/src"/>
 	<classpathentry kind="src" output="framework/extras/rpc/servlet/build" path="extras/rpc/servlet/src"/>
@@ -54,12 +55,12 @@
 	<classpathentry kind="lib" path="lib/framework/entity/jackson-core-2.7.1.jar"/>
 	<classpathentry kind="lib" path="lib/framework/entity/jackson-databind-2.7.1.jar"/>
 	<classpathentry kind="lib" path="lib/framework/gwt/gwt-dev-patch.jar"/>
-	<classpathentry kind="lib" path="lib/extras/classmeta/javaparser-core-3.5.13-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="lib/extras/classmeta/javaparser-core-generators-3.5.13-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="lib/extras/classmeta/javaparser-metamodel-generator-3.5.13-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="lib/extras/classmeta/javaparser-symbol-solver-core-3.5.13-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="lib/extras/classmeta/javaparser-symbol-solver-logic-3.5.13-SNAPSHOT.jar"/>
-	<classpathentry kind="lib" path="lib/extras/classmeta/javaparser-symbol-solver-model-3.5.13-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/framework/classmeta/javaparser-core-3.5.13-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/framework/classmeta/javaparser-core-generators-3.5.13-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/framework/classmeta/javaparser-metamodel-generator-3.5.13-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/framework/classmeta/javaparser-symbol-solver-core-3.5.13-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/framework/classmeta/javaparser-symbol-solver-logic-3.5.13-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/framework/classmeta/javaparser-symbol-solver-model-3.5.13-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/extras/jetty/jetty-all-uber.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
