classpath meta cache

--- a/.classpath
+++ b/.classpath
@@ -62,5 +62,8 @@
 	<classpathentry kind="lib" path="lib/framework/classmeta/javaparser-symbol-solver-logic-3.5.13-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/framework/classmeta/javaparser-symbol-solver-model-3.5.13-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/extras/jetty/jetty-all-uber.jar"/>
+	<classpathentry kind="lib" path="lib/framework/classmeta/barbary-watchservice-2.0-SNAPSHOT.jar" sourcepath="/barbary_watch"/>
+	<classpathentry kind="lib" path="lib/framework/classmeta/jna-4.5.1.jar"/>
+	<classpathentry kind="lib" path="lib/framework/classmeta/jna-platform-4.5.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
