--- a/.classpath
+++ b/.classpath
@@ -53,7 +53,7 @@
 	<classpathentry kind="lib" path="lib/framework/entity/kryo/reflectasm-1.10.1-shaded.jar"/>
 	<classpathentry kind="lib" path="lib/framework/common/jackson-annotations-2.7.1.jar"/>
 	<classpathentry kind="lib" path="lib/framework/entity/jackson-core-2.7.1.jar"/>
-	<classpathentry kind="lib" path="lib/framework/entity/jackson-databind-2.7.1.jar"/>
+	<classpathentry kind="lib" path="lib/framework/entity/jackson-databind-2.7.1.jar" sourcepath="/jackson-databind"/>
 	<classpathentry kind="lib" path="lib/framework/gwt/gwt-dev-patch.jar"/>
 	<classpathentry kind="lib" path="lib/framework/classmeta/javaparser-core-3.5.13-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="lib/framework/classmeta/javaparser-core-generators-3.5.13-SNAPSHOT.jar"/>
