--- a/build.properties
+++ b/build.properties
@@ -90,3 +90,6 @@ gwt.replace.1=<set-property name="user.agent" value="safari" />
 gwt.replace.2=<set-property name="user.agent" value="gecko1_8" />
 gwt.replace.3=<set-property name="user.agent" value="ie6" />
 gwt.replace.4=<set-property name="user.agent" value="ie8" />
+
+alcina.update-jars=false
+alcina.delete-before-jars=true
