--- a/build.xml
+++ b/build.xml
@@ -172,6 +172,7 @@
 				<include name="**/*.*" />
 				<!-- put in server (servlet/war) jar due to GWT/RPC classloader issues -->
 				<exclude name="${framework.remote.interface.package}" />
+				<exclude name="com/google/gwt/dom/client/**/*.*"/>
 			</fileset>
 
 			<fileset dir="${framework.dir}/common/src">
