--- a/build.xml
+++ b/build.xml
@@ -174,7 +174,9 @@
 				<exclude name="${framework.remote.interface.package}" />
 				<exclude name="com/google/gwt/dom/client/**/*.*"/>
 			</fileset>
-
+			<fileset dir="${framework.entity.build.dir}">
+				<include name="com/google/gwt/dom/client/DomState.class" />
+			</fileset>
 			<fileset dir="${framework.dir}/common/src">
 				<include name="**/*.java" />
 			</fileset>
