Rework search result grouping

--- a/framework/servlet/src/cc/alcina/framework/servlet/publication/delivery/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/publication/delivery/Bundle.properties
@@ -1,5 +1,5 @@
-smtp.host.name=localhost
-smtp.host.port=22525
+smtp.host.name=127.0.0.1
+smtp.host.port=5105
 smtp.authenticate=false
 smtp.username=noone
 smtp.password=password
