Rework internal metrics (v0.2)

--- a/framework/entity/src/cc/alcina/framework/entity/entityaccess/metric/Bundle.properties
+++ b/framework/entity/src/cc/alcina/framework/entity/entityaccess/metric/Bundle.properties
@@ -1,1 +1,3 @@
-InternalMetrics.active=false
+InternalMetrics.enabled=false
+InternalMetricSliceOracle.sliceOnMemcacheLockTime=50
+InternalMetricSliceOracle.initialClientDelay=2000
