--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="lib" path="lib/framework/entity/xalan-2.7.2.jar" sourcepath="/apache-java-trunk"/>
+	<classpathentry kind="lib" path="lib/framework/entity/xalan-2.7.2.jar" sourcepath="/g/minor/xalan-j"/>
 	<classpathentry exported="true" kind="lib" path="lib/framework/entity/commons-lang-2.5.jar"/>
 	<classpathentry excluding="cc/alcina/framework/common/translatable/" kind="src" path="framework/common/src"/>
 	<classpathentry kind="src" path="framework/classmeta/src"/>
