--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="lib" path="lib/framework/entity/xalan-2.7.2.jar" sourcepath="/g/minor/xalan-j"/>
 	<classpathentry exported="true" kind="lib" path="lib/framework/entity/commons-lang-2.5.jar"/>
-	<classpathentry excluding="cc/alcina/framework/common/translatable/" kind="src" path="framework/common/src"/>
+	<classpathentry excluding="cc/alcina/framework/common/translatable/|de/benediktmeurer/gwt/slf4j/api/" kind="src" path="framework/common/src"/>
 	<classpathentry kind="src" path="framework/classmeta/src"/>
 	<classpathentry kind="src" path="extras/jsdom/src-regex"/>
 	<classpathentry excluding="com/google/gwt/user/client/translatable/" kind="src" output="framework/extras/rpc/client/build" path="extras/rpc/client/src"/>
@@ -66,5 +66,6 @@
 	<classpathentry kind="lib" path="lib/framework/classmeta/javassist.jar"/>
 	<classpathentry kind="lib" path="lib/extras/dev/httpclient-4.5.jar"/>
 	<classpathentry kind="lib" path="lib/extras/dev/httpcore-4.4.3.jar"/>
+	<classpathentry kind="lib" path="lib/framework/entity/slf4j-api-1.7.25.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
