--- a/.classpath
+++ b/.classpath
@@ -67,5 +67,6 @@
 	<classpathentry kind="lib" path="lib/extras/dev/httpclient-4.5.jar"/>
 	<classpathentry kind="lib" path="lib/extras/dev/httpcore-4.4.3.jar"/>
 	<classpathentry kind="lib" path="lib/framework/entity/slf4j-api-1.7.25.jar"/>
+	<classpathentry kind="lib" path="lib/framework/entity/commons-pool2-2.6.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
