--- a/framework/servlet/src/cc/alcina/framework/servlet/servlet/loglevels.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/servlet/loglevels.properties
@@ -9,3 +9,5 @@ log.level.org.apache.http=WARN
 log.level.org.apache.http.wire=WARN
 log.level.httpclient.wire.header=WARN
 log.level.httpclient.wire.content=WARN
+log.level.io.netty=WARN
+log.level.com.datastax=WARN
