--- a/extras/dev/src/cc/alcina/extras/dev/console/remote/build-remoteconsole.properties
+++ b/extras/dev/src/cc/alcina/extras/dev/console/remote/build-remoteconsole.properties
@@ -16,7 +16,7 @@ project.gwt.client.static.tgt=${project.gwt.build.dir}/static
 project.gwt.module.file=${project.gwt.client.root}/ShopxClient.gwt.xml
 project.gwt.classpath.src=${project.client.home}/src:${alcina.home}/extras/jsdom/src:${alcina.home}/extras/jsdom/src-element:${alcina.home}/extras/rpc/client/src:${alcina.home}/extras/misc/src
 
-project.gwt.classpath.bin=${project.home}/entities/build:${project.home}/client/bin
+project.gwt.classpath.bin=${project.home}/entities/build:${project.home}/bin
 project.gwt.classpath.lib=${alcina.home}/lib/framework/impl/jboss-hibernate/hibernate-core-4.3.7.Final.jar:${alcina.home}/dist/alcina-extras-collections.jar:${alcina.home}/lib/framework/gwt/gwt-user.jar:${alcina.home}/lib/framework/gwt/gwt-elemental.jar:${alcina.home}/lib/framework/common/jackson-annotations-2.7.1.jar
 project.gwt.module.name=cc.alcina.extras.dev.console.remote.RemoteConsoleClient
 project.static.root=${project.dir}/WebRoot/static
