Add metric duration tests

--- a/framework/entity/src/cc/alcina/framework/entity/entityaccess/metric/Bundle.properties
+++ b/framework/entity/src/cc/alcina/framework/entity/entityaccess/metric/Bundle.properties
@@ -1,3 +1,4 @@
 InternalMetrics.enabled=false
+InternalMetrics.persistAllMetrics=false
 InternalMetricSliceOracle.sliceOnDomainStoreLockTime=50
 InternalMetricSliceOracle.initialClientDelay=2000
