Switch to normal property mechanism for cluster modes

--- a/framework/servlet/src/cc/alcina/framework/servlet/servlet/control/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/servlet/control/Bundle.properties
@@ -1,1 +1,7 @@
 ControlServlet.apiKey=
+AppLifecycleManager.writerMode=CLUSTER_WRITER
+AppLifecycleManager.writerRelayMode=WRITE
+AppLifecycleManager.writerServiceMode=CONTROLLER
+AppLifecycleManager.writerHost=http://127.0.0.1:8080
+AppLifecycleManager.apiKey=xxbrao
+
