Disable check hostname/ssl

--- a/framework/servlet/src/cc/alcina/framework/servlet/servlet/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/servlet/Bundle.properties
@@ -5,3 +5,4 @@ CommonRemoteServiceServlet.metricTrackerMs=0
 AlcinaChildRunnable.traceConstruction=false
 KnownsServlet.auth=
 TailServlet.file=/var/local/jboss/standalone/log/server.log
+AppLifecycleServletBase.allowAllHostnameVerifier=true
