Add test email function

--- a/framework/servlet/src/cc/alcina/framework/servlet/servlet/control/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/servlet/control/Bundle.properties
@@ -4,4 +4,4 @@ AppLifecycleManager.writerRelayMode=WRITE
 AppLifecycleManager.writerServiceMode=CONTROLLER
 AppLifecycleManager.writerHost=http://127.0.0.1:8080
 AppLifecycleManager.apiKey=xxbrao
-
+ControlServlet.testSendmailAddress=noone@alcina.cc
