--- a/build.properties
+++ b/build.properties
@@ -25,6 +25,9 @@ framework.classmeta.dir=${alcina.home}/framework/classmeta
 framework.classmeta.src.dir=${framework.classmeta.dir}/src
 framework.classmeta.build.dir=${framework.classmeta.dir}/build
 
+framework.jscodeserver.dir=${alcina.home}/framework/jscodeserver
+framework.jscodeserver.src.dir=${framework.jscodeserver.dir}/src
+
 framework.gwt.lib.dir=${framework.lib.dir}/gwt
 framework.classmeta.lib.dir=${framework.lib.dir}/classmeta
 framework.common.lib.dir=${framework.lib.dir}/common
