--- a/build.xml
+++ b/build.xml
@@ -138,10 +138,14 @@
 	<target name="check-cluster-tasks-jar">
 		<available file="${extras.tasks.dist.dir}/${ant.project.name}-cluster-tasks.jar" property="cluster-tasks-jar.present" />
 	</target>
-	<target name="make-gwt-dev-jar" description="gwt-dev-overrid" depends="">
+	<target name="make-gwt-dev-jar" description="gwt-dev-override" depends="">
 		<jar update="${alcina.update-jars}" destfile="${alcina.home}/dist-extras/gwt-dev-patch.jar">
 			<fileset dir="${alcina.home}/extras/jsdom/build">
 				<include name="**/JAbstractMethod.class" />
+			</fileset>
+			<fileset dir="${alcina.home}/framework/classmeta/build">
+				<include name="**/CrossSiteIframeLinker.class" />
+				<include name="**/CrossSiteIframeLinker$1.class" />
 			</fileset>
 			<fileset dir="${alcina.home}/extras/jsdom/res">
 				<include name="**/Cast.java" />
