--- a/.classpath
+++ b/.classpath
@@ -75,6 +75,6 @@
 	<classpathentry kind="lib" path="lib/extras/webdriver/selenium-server-standalone-3.7.1.jar"/>
 	<classpathentry kind="lib" path="lib/framework/entity/slf4j-log4j12-1.7.25.jar"/>
 	<classpathentry kind="lib" path="lib/framework/entity/javax.transaction-api-1.3.jar"/>
-	<classpathentry kind="lib" path="lib/extras/dev/tools.jar"/>
+	<classpathentry kind="lib" path="lib/framework/classmeta/tools.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
