Work on rdb; transform queueing

--- a/framework/servlet/src/cc/alcina/framework/servlet/servlet/Bundle.properties
+++ b/framework/servlet/src/cc/alcina/framework/servlet/servlet/Bundle.properties
@@ -6,3 +6,5 @@ AlcinaChildRunnable.traceConstruction=false
 KnownsServlet.auth=
 TailServlet.file=/var/local/jboss/standalone/log/server.log
 AppLifecycleServletBase.allowAllHostnameVerifier=true
+BackendTransformQueue.loopDelay=5000
+BackendTransformQueue.maxRunnables=100
