Data app refactoring

--- a/extras/dev/src/cc/alcina/extras/dev/console/remote/local.ant.properties
+++ b/extras/dev/src/cc/alcina/extras/dev/console/remote/local.ant.properties
@@ -1,5 +1,5 @@
 alcina.home=/g/alcina
 alcina.compiler.args=-nowarn
-project.gwt.compile.flags=-compileReport -strict -localWorkers 3 -logLevel INFO -sourceLevel 1.8 -gen /var/local/gen-gwt
+project.gwt.compile.flags=-compileReport -strict -localWorkers 3 -logLevel INFO -sourceLevel 1.8 -optimize 8 -gen /var/local/gen-gwt
 gwt.sdk.dir=${alcina.home}/lib/framework/gwt
 gwt.codestyle=pretty
